update home page

--- a/about.html
+++ b/about.html
@@ -34,10 +34,47 @@
             <h3>WOUNDERFUL DESTINATION</h3>
             <a href="#" class="button">LEARN MORE</a>
         </div>
-
     </section>
-    <!-- three div of section HOME -->
 
+    <!-- slide one image -->
+
+    <section id="slider-1">
+        <div class="container" id="top-m1">
+            <div class="row" id="one-img-slider">
+                <div class="col-md-6">
+                    <img src="about-1.jpg" alt="wait">
+                </div>
+
+                <div class="col-md-6 slider-about-text">
+                    <h2><i>WELCOME TO HOLIDAY</i></h2>
+                    <p id="gravida">Gravida nibh vel velit auctor aliquet enean sollicitudin lorem quis auctor</p>
+                    <div class="gray-p">
+                        <p> Holiday is free Bootstrap v3.3.5 responsive template for tour and travel websites. You can
+                            download
+                            and use this layout for any purpose. You do not need to provide a credit link to us. If you
+                            have
+                            any
+                            question, feel free to contact us.</p>
+                        <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat
+                            auctor
+                            eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                            himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum.</p>
+                    </div>
+                    <div id="font">
+                        <span><i class="fa-solid fa-heart"></i></span>
+                        <span><i class="fa-solid fa-heart"></i></span>
+                        <span><i class="fa-solid fa-heart"></i></span>
+                        <span><i class="fa-solid fa-heart"></i></span>
+                    </div>
+                </div>
+                </div>
+         </div>
+        </div>
+
+
+            <!-- about text -->
+           
+</section>
 </body>
 
 </html>
