completed home and about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="font-awesome.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <title>Main Project | About</title>
 </head>
 
 <body>
@@ -67,14 +67,148 @@
                         <span><i class="fa-solid fa-heart"></i></span>
                     </div>
                 </div>
-                </div>
-         </div>
+            </div>
+        </div>
         </div>
 
+    </section>
+    <!-- about text-are-about -->
+    <section id="who-we-are-about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 p-3">
+                    <hr>
+                </div>
+                <div class="col-md-4 px-5">
+                    <p id="div-text">WHO WE ARE</p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <hr>
+                </div>
+            </div>
+            <div class="row" id="about-four-div">
+                <div class="col-md-3 four-bg">
+                    <img src="about-4.jpg" alt="wait">
+                    <h5><em>THOMAS </em> <small>( Founder )</small></h5>
+                    <p>Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+                    <div class="font-icon1">
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </div>
 
-            <!-- about text -->
-           
-</section>
+                <div class="col-md-3 four-bg">
+                    <img src="about-5.jpg" alt="wait">
+                    <h5><em>KEITH </em> <small>( Co-Founder )</small></h5>
+                    <p>Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+                    <div class="font-icon1">
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </div>
+
+                <div class="col-md-3 four-bg">
+                    <img src="about-6.jpg" alt="wait">
+                    <h5><em>JOHN </em> <small>( General Manger )</small></h5>
+                    <p>Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+                    <div class="font-icon1">
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </div>
+
+                <div class="col-md-3 four-bg">
+                    <img src="about-7.jpg" alt="wait">
+                    <h5><em>SMITH </em> <small>( Manger )</small></h5>
+                    <p>Proin gravida nibhvell aliquet. Aenean sollicitudin bibum auctor nisi elit.</p>
+                    <div class="font-icon1">
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- what we do about -->
+    <section id="what-we-do-about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 p-3">
+                    <hr>
+                </div>
+                <div class="col-md-4 px-5">
+                    <p id="div-text">WHAT WE DO</p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div id="testimonial-about">
+                        <h3>TESTIMONIALS</h3>
+                    </div>
+                    <div class="testimonial-about-content">
+                        <p><em>"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+                                bibendum."
+                                <h6>JOHN SMITH</h6>
+                            </em></p>
+
+                        <p><em>"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+                                bibendum."
+                                <h6>JOHN SMITH</h6>
+                            </em></p>
+
+                        <p><em>"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+                                bibendum."
+                                <h6>JOHN SMITH</h6>
+                            </em></p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <img src="about-2.jpg" alt="wait">
+                    <br>
+                    <img src="about-3.jpg" alt="wait">
+                </div>
+
+                <div class="col-md-5">
+                   <div class="about-last-right-div-text"> <h3>GRAVIDA NIBH VEL VELIT AUCTOR ALIQUET ETIAM</h3>
+                    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
+                        vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis.</p>
+                        <div>
+                            <p>MAURIS IN ERAT JUSTO</p>
+                        </div>
+                    </div>
+
+                    <div class="about-last-right-div-text"> <h3>GRAVIDA NIBH VEL VELIT AUCTOR ALIQUET ETIAM</h3>
+                        <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
+                            vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per
+                            conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis.</p>
+                            <div>
+                                <p>MAURIS IN ERAT JUSTO</p>
+                            </div>
+                        </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; 2022 Your Company Name | Designed by Muhammad Asad</p>
+    </footer>
 </body>
 
 </html>
