create our tour page

--- a/Our Tour.html
+++ b/Our Tour.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="font-awesome.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <title>Main Project | Home</title>
+    <title>Main Project | Our Tour</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         </div>
     </header>
     <section>
-        <div class="slider-text">
+        <div class="slider-text-3">
             <h1>FIND <span> THE BEST </span>PLACE</h1>
             <h3>FOR YOUR TOUR</h3>
             <a href="#" class="button">LEARN MORE</a>
@@ -78,12 +78,13 @@
                     </div>
                 </div>
             </div>
+
             <div class="container" id="text-lorem">
                 <div class="row">
                     <div class="col-md-3">
                         <hr>
                     </div>
-                    <div class="col-md-6 loram">LOREM IPSUM DOLOR</div>
+                    <div class="col-md-6 ourTour">Our Tour</div>
                     <div class="col-md-3">
                         <hr>
                     </div>
@@ -92,69 +93,107 @@
     </section>
 
 
-    <!-- Home four box -->
-    <div class="four-into-four">
-        <div class="container my-5" id="home-4-box">
-            <div class="row mx-1">
-                <div class="col-md-3">
-                    <img src="index-03.jpg" alt="wait">
-                    <p>PROIN GRAVIDA NIBHVEL </p>
-                    <span> 28 MARCH 2022</span>
-                    <div class="row mx-1">
-                        <div class="col-3 boder-TR p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
-                        <div class="col-6 boder-TR p-3">TRAVEL</div>
-                        <div class="col-3 boder-t p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
+    <!-- Our tour section -->
+    <section id="ourTourSection">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="tour-img"><img src="tours-03.jpg" alt="wait"></div>
+                    <div class="tour-div-text-left">
+                        <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                        <p>28 March 2022</p>
+                    </div>
+                    <div class="tour-div-text-right">
+                        <p>Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.
+                        </p>
+                    </div>
+                    <div class="duration-tour">
+                        <p>DURATION: 8 DAYS</p>
+                    </div>
+                    <div class="duration-price">
+                        <p>$2,200</p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <img src="index-04.jpg" alt="wait">
-                    <p>PROIN GRAVIDA NIBHVEL </p>
-                    <span> 28 MARCH 2022</span>
-                    <div class="row mx-1">
-                        <div class="col-3 boder-TR p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
-                        <div class="col-6 boder-TR p-3">TRAVEL</div>
-                        <div class="col-3 boder-t p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
+              
+
+                <div class="col-md-6">
+                    <div class="tour-img"><img src="tours-04.jpg" alt="wait"></div>
+                    <div class="tour-div-text-left">
+                        <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                        <p>28 March 2022</p>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <img src="index-05.jpg" alt="wait">
-                    <p>PROIN GRAVIDA NIBHVEL </p>
-                    <span> 28 MARCH 2022</span>
-                    <div class="row mx-1">
-                        <div class="col-3 boder-TR p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
-                        <div class="col-6 boder-TR p-3">TRAVEL</div>
-                        <div class="col-3 boder-t p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
+                    <div class="tour-div-text-right">
+                        <p>Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.
+                        </p>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <img src="index-06.jpg" alt="wait">
-                    <p>PROIN GRAVIDA NIBHVEL </p>
-                    <span> 28 MARCH 2022</span>
-                    <div class="row mx-1">
-                        <div class="col-3 boder-TR p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
-                        <div class="col-6 boder-TR p-3">TRAVEL</div>
-                        <div class="col-3 boder-t p-3"><i class="fa-solid fa-heart"></i>
-                        </div>
+                    <div class="duration-tour">
+                        <p>DURATION: 8 DAYS</p>
+                    </div>
+                    <div class="duration-price">
+                        <p>$2,600</p>
                     </div>
                 </div>
             </div>
-            <div id="for-div-p">
-                <p>Holiday is free Bootstrap v3.3.5 responsive template for tour and travel websites. You can download
-                    and use
-                    this layout for any purpose. You do not need to provide a credit link to us. If you have any
-                    question, feel
-                    free to contact us. Credit goes to <a href="https://unsplash.com/">Unspash</a> for images used in
-                    this template.</p>
+<br>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="tour-img"><img src="tours-05.jpg" alt="wait"></div>
+                    <div class="tour-div-text-left">
+                        <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                        <p>28 March 2022</p>
+                    </div>
+                    <div class="tour-div-text-right">
+                        <p>Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.
+                        </p>
+                    </div>
+                    <div class="duration-tour">
+                        <p>DURATION: 5 DAYS</p>
+                    </div>
+                    <div class="duration-price">
+                        <p>$2,100</p>
+                    </div>
+                </div>
+              
+
+                <div class="col-md-6">
+                    <div class="tour-img"><img src="tours-06.jpg" alt="wait"></div>
+                    <div class="tour-div-text-left">
+                        <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                        <p>28 March 2022</p>
+                    </div>
+                    <div class="tour-div-text-right">
+                        <p>Lorem quis bibendum auctor, nisi elit consequat ipsum, sec sagittis sem nibh id elit.
+                        </p>
+                    </div>
+                    <div class="duration-tour">
+                        <p>DURATION: 10 DAYS</p>
+                    </div>
+                    <div class="duration-price">
+                        <p>$2,400</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- last four box text-->
     <section class="section-2">
         <div class="container four-box-text ">
