--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <ul class="float-md-right">
                         <li><a href="index.html"> HOME</a></li>
                         <li><a href="about.html"> ABOUT</a></li>
-                        <li><a href="#"> OUR TOURS</a></li>
+                        <li><a href="Our Tour.html"> OUR TOURS</a></li>
                         <li><a href="#"> CONTACT</a></li>
                     </ul>
                 </div>
