page our tour complete

--- a/Our Tour.html
+++ b/Our Tour.html
@@ -114,7 +114,7 @@
                         <p>$2,200</p>
                     </div>
                 </div>
-              
+
 
                 <div class="col-md-6">
                     <div class="tour-img"><img src="tours-04.jpg" alt="wait"></div>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </div>
-<br>
+            <br>
             <div class="row">
                 <div class="col-md-6">
                     <div class="tour-img"><img src="tours-05.jpg" alt="wait"></div>
@@ -153,7 +153,7 @@
                         <p>$2,100</p>
                     </div>
                 </div>
-              
+
 
                 <div class="col-md-6">
                     <div class="tour-img"><img src="tours-06.jpg" alt="wait"></div>
@@ -202,7 +202,7 @@
                     <hr>
                 </div>
                 <div class="col-md-4 px-5">
-                    <p id="div-text">POPULAR <br> PAKAGES</p>
+                    <p id="div-text">SPECIAL <br> PAKAGES</p>
                 </div>
                 <div class="col-md-4 p-3">
                     <hr>
@@ -210,83 +210,60 @@
             </div>
 
             <!-- last four box -->
-            <div class="row" id="div-mr">
-                <div class="col-md-6">
-                    <table border="1">
-                        <tr>
-                            <td rowspan="2"><img src="index-07.jpg" alt="wait"></td>
-                            <td colspan="3">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae modi quia id facilis
-                                    odit
-                                    enim.</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                            <td>TRAVEL</td>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                        </tr>
-                    </table>
+            <div class="row" id="div-tour-last">
+                <div class="col-md-3" class="border-div">
+                    <img src="index-03.jpg" alt="wait">
+                    <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                    <img src="rating.png" alt="wait">
+                    <p>28 March 2084</p>
+                    <div class="book-now">
+                        <a href="#">BOOK NOW</a>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <table border="1">
-                        <tr>
-                            <td rowspan="2"><img src="index-08.jpg" alt="wait"></td>
-                            <td colspan="3">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae modi quia id facilis
-                                    odit
-                                    enim.</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                            <td>TRAVEL</td>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                        </tr>
-                    </table>
+
+                <div class="col-md-3" class="border-div">
+                    <img src="index-04.jpg" alt="wait">
+                    <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                    <img src="rating.png" alt="wait">
+                    <p>28 March 2084</p>
+                    <div class="book-now">
+                        <a href="#">BOOK NOW</a>
+                    </div>
+                </div>
+
+                <div class="col-md-3" class="border-div">
+                    <img src="index-05.jpg" alt="wait">
+                    <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                    <img src="rating.png" alt="wait">
+                    <p>28 March 2084</p>
+                    <div class="book-now">
+                        <a href="#">BOOK NOW</a>
+                    </div>
+                </div>
+
+                <div class="col-md-3" class="border-div">
+                    <img src="index-06.jpg" alt="wait">
+                    <p>PROIN GRAVIDA NIBHVEL LOREM QUIS BIND</p>
+                    <img src="rating.png" alt="wait">
+                    <p>28 March 2084</p>
+                    <div class="book-now">
+                        <a href="#">BOOK NOW</a>
+                    </div>
                 </div>
             </div>
 
-            <div class="row" id="div-mr2">
-                <div class="col-md-6">
-                    <table border="1">
-                        <tr>
-                            <td rowspan="2"><img src="index-09.jpg" alt="wait"></td>
-                            <td colspan="3">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae modi quia id facilis
-                                    odit
-                                    enim.</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                            <td>TRAVEL</td>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <table border="1">
-                        <tr>
-                            <td rowspan="2"><img src="index-10.jpg" alt="wait"></td>
-                            <td colspan="3">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae modi quia id facilis
-                                    odit
-                                    enim.</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                            <td>TRAVEL</td>
-                            <td><i class="fa-solid fa-heart"></i></td>
-                        </tr>
-                    </table>
+            <div class="row" id="last-para">
+                <div class="col-md-12" >
+                    <p>Lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
+                        odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsaipsu m velit. Nam nec tellus
+                        a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat.</p>
                 </div>
             </div>
+
         </div>
     </section>
     <footer>
-        <p>Copyright &copy; 2022 Your Company Name | Designed by Muhammad Asad</p>
+        <p>Copyright &copy; 2022 Your Company Name | Designed by <span id="foot-colr"> Muhammad Asad</span></p>
     </footer>
 </body>
 
