--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
     </section>
     <footer>
-        <p>Copyright &copy; 2022 Your Company Name | Designed by Muhammad Asad</p>
+        <p>Copyright &copy; 2022 Your Company Name | Designed by <span id="foot-colr"> Muhammad Asad</span></p>
     </footer>
 </body>
 
