--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
     </section>
 
     <footer>
-        <p>Copyright &copy; 2022 Your Company Name | Designed by Muhammad Asad</p>
+        <p>Copyright &copy; 2022 Your Company Name | Designed by <span id="foot-colr"> Muhammad Asad</span></p>
     </footer>
 </body>
 
